validator_derive_tests/tests/compile-fail/unexpected_validator.stderr
error: Unexpected validator: my_custom_validator
 --> $DIR/unexpected_validator.rs:5:16
  |
5 |     #[validate(my_custom_validator)]
  |                ^^^^^^^^^^^^^^^^^^^
